--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,16 @@
   },
   "homepage": "https://github.com/gee1k/coord-transform#readme",
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "np": "*"
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "np": {
+		"yarn": false,
+    "tests": false,
+    "branch": "main",
+		"contents": "dist"
+	}
 }
